# lab-results-normalizer

./: .gitignore  README.md  pyproject.toml
lab_normalizer/: config.py
lab_normalizer/api/: app.py  dependencies.py  routes.py  schemas.py
lab_normalizer/domain/: models.py
lab_normalizer/ingestion/: acme_json.py  base.py  registry.py
lab_normalizer/storage/: base.py  memory.py
samples/: acme_labs.json
tests/: conftest.py  test_acme_parser.py  test_api.py  test_domain.py  test_repository.py
